feat: donation api
